--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@clerk/express": "^1.3.31",
-    "body-parser": "^2.0.2",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
-    "mongoose": "^8.9.2",
-    "svix": "^1.44.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
