--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.20.4",
     "imagekitio-react": "^4.2.0",
+    "lucide-react": "^0.469.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.3.3",
     "react-router-dom": "^7.0.2"
